k8s/patient-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: patient

  template:
    metadata:
      labels:
        app: patient
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: patient
            topologyKey: "kubernetes.io/hostname"

      containers:
        - name: patient
          image: rajeevreddy1511/patient-service-1:v19
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
