k8s/visit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-service
spec:
  replicas: 4

  # ✅ Rolling Update Strategy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: visit

  template:
    metadata:
      labels:
        app: visit
    spec:
      containers:
        - name: visit
          image: rajeevreddy1511/visit-service-1:v16
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
