k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hmis-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:

      # 🔥 ADD THIS
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: monitoring-grafana
            port:
              number: 80

      # Existing
      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 3000

      - path: /visits
        pathType: Prefix
        backend:
          service:
            name: visit-service
            port:
              number: 3001

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
